style(page): fix small padding issue
The padding here is useful for browsers that display a full on scrollbar
instead of an overlay scrollbar. We can continue to think about how
that space it utilized in future commits/prs.

--- a/src/components/Page/Page.scss
+++ b/src/components/Page/Page.scss
@@ -26,6 +26,6 @@
 
   @include break {
     flex: 3;
-    padding: 1.5em 1.5em 1.5em 0;
+    padding: 1.5em;
   }
 }
